force-app/main/default/objects/CP_Invoice__c/fields/Approval_Date_level_2__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_level_2__c</fullName>
    <label>Approval Date level 2</label>
    <type>DateTime</type>
</CustomField>