force-app/main/default/objects/CP_Invoice__c/fields/Approval_Level_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_1_Date__c</fullName>
    <label>Approval Level 1 Date</label>
    <type>DateTime</type>
</CustomField>