force-app/main/default/objects/CP_Invoice__c/fields/Approver_1_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_1_Comments__c</fullName>
    <label>Approver 1 Comments</label>
    <type>TextArea</type>
</CustomField>