force-app/main/default/objects/CP_Invoice__c/fields/Approver_1_Sales__c.field-meta.xml
<CustomField>
    <fullName>Approver_1_Sales__c</fullName>
    <label>Approver 1 (Sales)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>