force-app/main/default/objects/CP_Invoice__c/fields/Approver_2_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_2_Comments__c</fullName>
    <label>Approver 2 Comments</label>
    <type>TextArea</type>
</CustomField>