force-app/main/default/objects/CP_Invoice__c/fields/Approver_2_Sales__c.field-meta.xml
<CustomField>
    <fullName>Approver_2_Sales__c</fullName>
    <label>Approver 2 (Sales)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>