force-app/main/default/objects/CP_Invoice__c/fields/Bank_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Reference_Number__c</fullName>
    <label>Bank Reference Number</label>
    <length>155</length>
    <type>Text</type>
</CustomField>