force-app/main/default/objects/CP_Invoice__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CP Invoices (Channel Partner)</relationshipLabel>
    <relationshipName>CP_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>