force-app/main/default/objects/CP_Invoice__c/fields/CP_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>CP_Invoice_Amount__c</fullName>
    <label>CP Invoice Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>