force-app/main/default/objects/CP_Invoice__c/fields/Level1_Status__c.field-meta.xml
<CustomField>
    <fullName>Level1_Status__c</fullName>
    <label>Level1 Status</label>
    <length>155</length>
    <type>Text</type>
</CustomField>