force-app/main/default/objects/CP_Invoice__c/fields/Level_2_Status__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Status__c</fullName>
    <label>Level 2 Status</label>
    <length>155</length>
    <type>Text</type>
</CustomField>