force-app/main/default/objects/CP_Invoice__c/fields/Tower_Name__c.field-meta.xml
<CustomField>
    <fullName>Tower_Name__c</fullName>
    <formula>Opportunity__r.Tower__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tower Name</label>
    <type>Text</type>
</CustomField>