force-app/main/default/objects/CP_Invoice__c/fields/X18_GST__c.field-meta.xml
<CustomField>
    <fullName>X18_GST__c</fullName>
    <label>18% GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>